# vllm-benchmark

./: .gitignore  LICENSE  README.md  benchmark.sh  pyproject.toml  ssh_34200866.json  ssh_34205110.json  ssh_34205993.json  ssh_34207962.json  ssh_34211893.json  ssh_34213886.json  ssh_34214679.json  ssh_34216197.json  ssh_34216865.json  ssh_34217019.json  vllm-bench.sh
configs/: branch_compare.yaml  mla_fusion_b200.yaml  mla_fusion_dgx_spark.yaml  mla_fusion_h100.yaml  mla_quant_fusion_b200_fp8.yaml  mla_quant_fusion_b200_fp8_cudagraph.yaml  mla_quant_fusion_b200_nvfp4.yaml  mla_quant_fusion_dgx_spark_fp8.yaml  mla_quant_fusion_dgx_spark_nvfp4.yaml  mla_quant_fusion_h100_fp8.yaml  mla_quant_fusion_h100_fp8_eager.yaml
configs/merge_attn_fp8/: b200.yaml  dgx_spark.yaml  h100.yaml  h100_test.yaml
configs/mla_fa4_fp8_output/: RESULTS.md  b200_dscoder_v2_lite_fp8_bench.yaml  b200_dscoder_v2_lite_fp8_bench_bs1.yaml  b200_dscoder_v2_lite_fp8_eval.yaml  h100_unit_test.yaml
configs/mla_merge_state_fusion/: h100_dscoder_v2_lite_fp8_bench.yaml  h100_dscoder_v2_lite_fp8_bench_interleaved.yaml  h100_dscoder_v2_lite_fp8_bench_long.yaml  h100_dscoder_v2_lite_fp8_bench_long_swap.yaml  h100_dscoder_v2_lite_fp8_bench_swap.yaml  h100_dscoder_v2_lite_fp8_eval.yaml
configs/mla_quant_fusion/: b200_dsv3_eval.yaml  b200_fa4_pergroup_output_eval.yaml  b200_fa4_pergroup_output_test.yaml  b200_feat_test.yaml  b200_feat_test_v2.yaml  b200_fp8.yaml  b200_fp8_cudagraph.yaml  b200_fp8_eval.yaml  b200_group_fp8.yaml  b200_group_fp8_eval.yaml  b200_main_mla_fusion_repro.yaml  b200_nvfp4.yaml  b200_nvfp4_debug.yaml  (+33 more)
tests/: test_builder.py  test_config.py  test_resolved.py  test_summary.py
(+12 files in other folders)
